--- a/apps/firebase-poc/index.html
+++ b/apps/firebase-poc/index.html
@@ -11,6 +11,6 @@
     <header>
       <a href="./user.html">User Page</a>
     </header>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/admin.page.ts"></script>
   </body>
 </html>
