--- a/apps/firebase-poc/index.html
+++ b/apps/firebase-poc/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <header>
-      <a href="./user.html">User Page</a>
+      <a href="./user.html?rock=1">Rock 1</a>
+      <a href="./user.html?rock=2">Rock 2</a>
+      <a href="./user.html?rock=3">Rock 3</a>
+      <a href="./user.html?rock=4">Rock 4</a>
+      <a href="./user.html?rock=5">Rock 5</a>
     </header>
     <script type="module" src="/src/admin.page.ts"></script>
   </body>
