update admin UI

--- a/apps/firebase-poc/index.html
+++ b/apps/firebase-poc/index.html
@@ -15,6 +15,7 @@
       <a href="./user.html?rock=4">Rock 4</a>
       <a href="./user.html?rock=5">Rock 5</a>
     </header>
+    <div id="app"></div>
     <script type="module" src="/src/admin.page.ts"></script>
   </body>
 </html>
