--- a/apps/firebase-poc/index.html
+++ b/apps/firebase-poc/index.html
@@ -8,13 +8,21 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🪨</text></svg>" />
   </head>
   <body>
-    <header>
+    <div>
+      <label>Topic</label>
+      <br />
+      <textarea>What’s something in your childhood that really inspired you? Do you still do it?</textarea>
+
+      <button>Create rocks</button>
+    </div>
+
+    <div>
       <a href="./user.html?rock=1">Rock 1</a>
       <a href="./user.html?rock=2">Rock 2</a>
       <a href="./user.html?rock=3">Rock 3</a>
       <a href="./user.html?rock=4">Rock 4</a>
       <a href="./user.html?rock=5">Rock 5</a>
-    </header>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/admin.page.ts"></script>
   </body>
