--- a/apps/firebase-poc/index.html
+++ b/apps/firebase-poc/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin - Rock talk</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🪨</text></svg>" />
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
   </head>
   <body>
     <div>
@@ -25,5 +27,14 @@
     </div>
     <div id="app"></div>
     <script type="module" src="/src/admin.page.ts"></script>
+
+    <script>
+      // Initialize the FirebaseUI Widget using Firebase.
+      var ui = new firebaseui.auth.AuthUI(firebase.auth());
+      ui.start("#firebaseui-auth-container", {
+        signInOptions: [firebase.auth.EmailAuthProvider.PROVIDER_ID],
+        // Other config options...
+      });
+    </script>
   </body>
 </html>
